dev/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: gateway
      port: 8000
      targetPort: gateway-port
      protocol: TCP
